--- a/css/register.css
+++ b/css/register.css
@@ -14,6 +14,7 @@ fieldset
     background-color: rgb(0,0,0,0.1);
     width: 600px;
     height: 400px;
+    color: rgba(255, 255, 255, 0.507);
     box-shadow: rgb(0,0,0,0.2) 1px 1px 4px 4px;
     border: solid 2px rgba(234, 234, 234, 0.999);
     border-radius: 20px;
